--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 .jumbotron{
     padding: 70px 30px 70px 30px;
     margin: 0px;
-    background: #9575cd;
+    background-color: steelblue;
     color: floralwhite;
 }
 
@@ -27,4 +27,13 @@
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
+}
+
+body{
+    padding: 50px0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: cadetblue;
 }
