--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,19 @@ body{
     border-bottom: 1px solid #DDD;
     padding: 10px;
 }
+
+.carousel{
+    background: rgb(0, 0, 0);
+}
+
+.carousel-item{
+    height: 300px;
+}
+
+.carousel-item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+    min-width:100px;
+}
